manifests/argocd/bluegreen/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: go-bumblebee-bluegreen
  labels:
    istio-injection: enabled
