manifests/argocd/bluegreen/air-rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout 
metadata:
  name: air
spec:
  replicas: 3
  selector:
    matchLabels:
      app: air
  template:
    metadata:
      labels: 
        app: air
    spec:
      terminationGracePeriodSeconds: 5
      containers:
      - name: air-go-bumblebee
        image:  herochinese/go-bumblebee-air:master
        ports:
          - name: http
            containerPort: 9011
        resources:
          requests: 
            cpu: 100m
            memory: 64Mi
          limits:
            cpu: 200m
            memory: 128Mi
  strategy:
    blueGreen:
      activeService: air-bluegreen-active
      previewService: air-bluegreen-preview
      autoPromotionEnabled: false

---
kind: Service
apiVersion: v1
metadata:
  name: air-bluegreen-active
spec:
  selector:
    app: air
  ports:
  - protocol: TCP
    port: 9011
    targetPort: 9011

---
kind: Service
apiVersion: v1
metadata:
  name: air-bluegreen-preview
spec:
  selector:
    app: air
  ports:
  - protocol: TCP
    port: 9011
    targetPort: 9011
