manifests/argocd/bluegreen/was-rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout 
metadata:
  name: was
spec:
  replicas: 3
  selector:
    matchLabels:
      app: was
  template:
    metadata:
      labels: 
        app: was
    spec:
      terminationGracePeriodSeconds: 5
      containers:
      - name: was-go-bumblebee
        image:  herochinese/go-bumblebee-was:master
        livenessProbe:
          failureThreshold: 5
          httpGet:
            path: /ping
            port: 9010
            scheme: HTTP
          initialDelaySeconds: 60
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5        
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /ping
            port: 9010
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        ports:
          - name: http
            containerPort: 9010
          - name: websocket
            containerPort: 9040
        resources:
          requests: 
            cpu: 100m
            memory: 64Mi
          limits:
            cpu: 200m
            memory: 128Mi
  strategy:
    blueGreen:
      activeService: was-bluegreen-active
      previewService: was-bluegreen-preview
      autoPromotionEnabled: false

---
kind: Service
apiVersion: v1
metadata:
  name: was-bluegreen-active
spec:
  selector:
    app: was
  ports:
  - protocol: TCP
    port: 9010
    targetPort: 9010

---
kind: Service
apiVersion: v1
metadata:
  name: was-bluegreen-preview
spec:
  selector:
    app: was
  ports:
  - protocol: TCP
    port: 9010
    targetPort: 9010
